[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yes-forecast-risk-system"
version = "0.1.0"
description = "Operational forecast risk decision support system for power market workflows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Jayden Xinghua Xia"}]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pyyaml>=6.0",
  "matplotlib>=3.8",
  "joblib>=1.3"
]

[project.scripts]
yes-risk = "yes_forecast_risk.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
